--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,200 +1,347 @@
+
+:root {
+    --primary: #93c47d;
+    --secondary: #d1d5e5;
+    --pop: #b4802e;
+}
+
+/* removes default style */
 * {
-    box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+/* basic settings for body styling */
 body {
-    background-color: #d9dcd6;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: var(--primary);
+    background-color: var(--secondary);
 }
 
-.header {
+/* start of styling for header */
+header {
+    background-color: var(--primary);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
 }
 
-.header h1 {
-    display: inline-block;
+header div {
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
+}
+
+header h1 {
+    color: var(--pop);
+    font-size: 40px;
+    font-weight: bold;
+    background-color: var(--secondary);
+    padding: 10px;
+    border: 5px solid var(--pop);
+}
+
+header a {
+    text-decoration: none;
+    color: var(--secondary)
+}
+
+header nav u1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+}
+
+header nav {
+    margin: 20px;
+}
+
+header nav ul li a {
+    padding: 10px;
+    font-size: 20px;
+    margin: 20px 20px 0 0;
+    font-weight: bold;
+}
+
+header nav ul li a:hover {
+    background: var(--pop);
+    color: var(--primary);
+    border-radius: 15px;
+}
+
+
+
+
+/* start of hero styling */
+.hero {
+    background-image: url("a painted wall.jperg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.hero img {
+    height: 400px;
+}
+
+.hero .quote {
+    font-size: 35px;
+    display: flex;
+    justify-content: end;
+    text-align: right;
+    color: rgb(192, 185, 185);
+}
+
+.hero .quote #quote-text {
     font-size: 48px;
 }
 
-.header h1 .seo {
-    color: #d9dcd6;
+
+/* start of utility class styling */
+.title {
+    border-right: 5px solid var(--pop);
+    min-height: 100%;
+    text-align: right;
+    padding-right: 40px;
+    min-width: 20%;
+    max-width: 20%;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.title h2 {
+    font-size: 48px;
+}
+
+
+
+/* about me section styling */
+.about-me {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    padding-top: 30px;
+}
+
+.about-me p {
     font-size: 20px;
+    padding: 0 30px;
+    line-height: 1.6;
+    width: 90%;
 }
 
-.header div ul {
-    list-style-type: none;
+
+/* start of My Projects styling */
+.my-work {
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--primary);
 }
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+.my-work h2 {
+    color: var(--secondary);
 }
 
-a {
-    color: #ffffff;
+.projects-grid-wrapper {
+    width: 80%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+}
+
+.projects-grid {
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.project {
+    border: solid;
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
     text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    opacity: 0.5;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
+.project:hover {
+    opacity: 1.0;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
+.mock-website-frontend-for-an-ad-agency {
+    grid-column: 1/3;
+    grid-row: span 2;
+    background-image: url("filler atm");
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+.filler-for-now {
+    background-image: url("filler atm 2");
+    background-position: 50% 15%;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+.determine-if-having-eggs {
+    background-image: url("filler atm 3");
+    background-position: 60% 50%;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
+.current-moon-temperature {
+    background-image: url("filler atm 4"); 
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.assign-a-random-password {
+    background-image: url("filler atm 5");
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
+.random-cat-photo-generator {
+    background-image: url ("filler atm 6");
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.project-label {
+    background-color:#81848f;;
+    color: var(--primary);
+    padding: 10px;
+}
+/* contact information styling */
+footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    margin-bottom: 30px;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.content-wrapper {
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
+#my-contact-information {
+    width: 60%;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+footer ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    font-size: 30px;
+    font-weight: bolder;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+footer ul li {
+
+    font-weight: bold;
 }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+footer ul li a{
+    text-decoration: none;
+    color: var(--primary);
+    padding: 8px;
+    font-weight: bold;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+footer ul li a:hover {
+    background: var(--pop);
+    color: var(--secondary);
+    border-radius: 15px;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+
+/* media query for small screens, not sure if any of this works */
+@media screen and (max-width: 760px) {
+    .hero .quote {
+        font-size: 30px;
+        padding-right: 20px;
+    }
+
+    .hero .quote #quote-text {
+        font-size: 36px;
+    }
+
+    .title h2 {
+        font-size: 36px;
+    }
+
+    .about-me p {
+        font-size: 18px;
+        line-height: 1.4;
+    }    
 }
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+@media screen and (max-width: 560px) {
+    header {
+        justify-content: center;
+        padding: 20px;
+    }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
+    header nav ul {
+        min-height: 70px;
+    }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
+    .hero {
+        flex-direction: column;
+    }
 
-.social-media-marketing img {
-    max-height: 200px;
-}
+    .about-me {
+        flex-direction: column;
+    }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+    .title {
+        border-bottom: 6px solid var(--pop);
+        border-right: none;
+        text-align: center;
+        min-width: 100%;
+        max-width: 100%;
+        padding: 0;
+    }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+    .about-me p {
+        font-size: 18px;
+        line-height: 1.4;
+        width: 100%;
+        padding: 20px;
+    }
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+    .my-projects {
+        flex-direction: column;
+        padding: 20px 0;
+    }
 
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
+    .projects-grid-wrapper {
+        width: 100%;
+        padding: 10px;
+    }
 
-.footer h2 {
-    font-size: 20px;
+    .projects-grid {
+        width: 100%;
+    }
+
+    footer {
+        flex-direction: column;
+    }
+
+    footer ul {
+        flex-direction: column;
+    }
+
+    .content-wrapper {
+        width: 100%
+    }
+
+    footer ul li {
+        padding: 10px;
+        text-align: center;
+    }
+
 }
