--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ header nav ul li a:hover {
 }
 
 .mock-website-frontend-for-an-ad-agency {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: span 2;
     background-image: url("filler atm");
 }
@@ -195,7 +195,9 @@ header nav ul li a:hover {
 }
 
 .current-moon-temperature {
-    background-image: url("filler atm 4"); 
+    background-image: url("filler atm 4");
+    grid-column: 1/2;
+    grid-row: span 2; 
 }
 
 .assign-a-random-password {
@@ -203,7 +205,7 @@ header nav ul li a:hover {
 }
 
 .random-cat-photo-generator {
-    background-image: url ("filler atm 6");
+    background-image: url("filler atm 6");
 }
 
 .project-label {
